
  - Enhancement: ports() can take an empty argument, returning all ports;
    permissions made configurable rather than hardcoded.

  - Enhancement: push() with an empty argument now pushes an empty string
    onto the stack, rather than returning an error.

  - Enhancement: lor(), etc. return 0 on an empty argument, rather than an
    error.

  - Enhancement: PennMUSH-style %+ substitution (returns number of arguments
    on the stack).

  - Bugfix: lunion() etc. correctly detect sort type when first argument
    is blank. [3.1a7]

  - Bugfix: writable() works on attributes that didn't previously 
    exist. [3.1a8]

  - Bugfix: Don't leak memory on speak(). [3.1b3]

  - Bugfix: Don't match an empty string to an exit (i.e., no foo;;bar). [2.0]

  - Bugfix: @femit/spoof gives output properly. [3.1p2]

  - Bugfix: Players who are hidden (Dark) can now have their names
    partial-matched for page, etc. by players who can see hidden. [MUX]

  - Bugfix: All site flags must be kept and checked (so, for instance, you
    can restrict both creates and guests). [3.0b8]

  - Bugfix: Global registers must be cleared when doing notification. [2.0]

  - Bugfix: Bad @cron syntax can no longer cause a loop. [3.0b8]

  - Bugfix: Message to/use of an emptied comsys channel can no longer cause
    a crash. [3.0b14]

  - Bugfix: flag_access must have a permission. [2.0; Brazil]

  - Maintenance: Updated GDBM's AutoConf to version 2.59.

  - Maintenance: Updated GDBM's LibTools to version 1.5.22.

  - Maintenance: Removed unused variables related to @program. Per Brazil.

  - Compatibility: Enables TinyMUSH to read the escapes of cr/lf add to the 
    TinyMUX flatfile. Per Brazil.

3.1 Patchlevel 4 -- December 19th, 2006

  - Fixed Always clear @prog data on logout

  - Fixed tools (src/tools). Add an install tag to the tools makefile.

  - Update LibTools to version 1.5.22.

  - Update AutoConf to version 2.59.
